--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "Base64": "^1.2.0",
     "bull": "^3.16.0",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
