--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon --exec babel-node --presets @babel/preset-env",
     "test": "mocha --require @babel/register --exit"
   },
-  "author": "",
+  "author": "Taiwo Triumphant",
   "license": "ISC",
   "dependencies": {
     "Base64": "^1.2.0",
